<resources>
    <string name="app_name">NeoStarTask</string>
    <string name="educational_info_section_header">Educational Info</string>
    <string name="education_label">Education<font color="#FF0000">*</font></string>
    <string name="qualification_hint">Select your qualification</string>
    <string name="year_of_passing_hint">Enter year of passing</string>
    <string name="year_of_passing_label">Year of Passing<font color="#FF0000">*</font></string>
    <string name="university_label">University</string>
    <string name="university_name_hint">Enter university name</string>
    <string name="grade_label">Grade</string>
    <string name="grade_hint">Enter your grade</string>
    <string name="professional_info_section_header">Professional Info</string>
    <string name="experience_label">Experience</string>
    <string name="experience_hint">Enter your experience</string>
    <string name="designation_label">Designation</string>
    <string name="designation_hint">Enter Designation</string>
    <string name="domain_label">Domain</string>
    <string name="domain_hint">Enter your domain</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="address_label">Address<font color="#FF0000">*</font></string>
    <string name="address_hint">Address</string>
    <string name="landmark_label">Landmark<font color="#FF0000">*</font></string>
    <string name="landmark_hint">Landmark</string>
    <string name="city_label">City</string>
    <string name="city_hint">City</string>
    <string name="state_label">State<font color="#FF0000">*</font></string>
    <string name="state_hint">State</string>
    <string name="pin_code_label">Pin Code</string>
    <string name="pin_code_hint">Pin code</string>
    <string name="submit">Submit</string>
    <string name="first_name_label">First name<font color="#FF0000">*</font></string>
    <string name="first_name_hint">Enter your first name here</string>
    <string name="last_name_label">Last name<font color="#FF0000">*</font></string>
    <string name="last_name_hint">Enter your last name here</string>
    <string name="phone_number_label">Phone number<font color="#FF0000">*</font></string>
    <string name="phone_number_hint">Enter your 10 digit phone number here</string>
    <string name="email_label">Email <font color="#FF0000">*</font></string>
    <string name="email_hint">Enter your email here</string>
    <string name="gender_label">Gender<font color="#FF0000">*</font></string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="password_label">Password<font color="#FF0000">*</font></string>
    <string name="password_hint">Enter password here</string>
    <string name="confirm_password_label">Confirm password<font color="#FF0000">*</font></string>
    <string name="confirm_password_hint">Enter confirm password here</string>
    <string name="registration_success">Registration success!</string>
    <string name="pick_image_from">Pick image from</string>
    <string name="camera_button">Camera</string>
    <string name="gallery_button">Gallery</string>
</resources>